Thu Feb 27 11:07:05 1997  Laurent Pautet  <pautet@lglsun11.epfl.ch>

	* xe_check.adb: Check that a channel has not been declared twice
 	(wuth a different name like (C1, C2 : Channel := (P1, P2)). Check
 	that the pair of partitions is a real pair, and not twice the same
 	partition.

	* xe_stubs.adb: Predefined type partition filer was incorrectly
 	generated. The peer partition name was also incorrect.  Forgot to
 	check that the default filter was not null => illegal with.

	xe.ads, xe.adb: Add Get_Filter for a partition.

Wed Feb 26 22:03:43 1997  Laurent Pautet  <pautet@lglsun11.epfl.ch>

	* xe.ads: Change attribute filter into CFilter (Channel) and add a
 	new one PFilter (Partition). When this attribute applies to
 	predefined type Partition, then a partition always communicates
 	with another one using the given filter. When this attribute
 	applies to predefined channel type, any communication channel
 	declared in the configuration language uses the given filter. At
 	last, when this attributeapplies to a communication channel, the
 	filter used is the filter given.

	* xe_stdcnf.adb: Propagate changes mentionned above.
	
	* xe.ads: Add pragma Registration_Filter. When a partition
 	registers its filters (and data) to the lead partition or when a
 	partition queries filters (and data) of another partition, then a
 	default filter can be used. In some way, it is similar to the
 	Boot_Server pragma. This feature is usefull for encryption when
 	two partitions have to exchange (for instance) a DES key encrypted
 	with public and private keys.

	* xe_back.adb: Channels table has been redefined. In Partitions
 	table, First_Channel and Last_Channel are head and tail of a
 	linked list of channels. In Channels, a channel is a peer (L, R)
 	of Channel Partition, which contains the partition P and the next
 	channel of this partition P.

	* xe_back.adb: P'Filter has been forbidden. I can't see the
 	possible usage of this feature. Only Partition'Filter is